--- a/aura/trac_Loyalty/trac_Loyalty.cmp
+++ b/aura/trac_Loyalty/trac_Loyalty.cmp
@@ -6,44 +6,36 @@
     <aura:attribute name="isEditable" type="Boolean" default="false" />
     <aura:attribute name="isDisabled" type="Boolean" default="false" />
     <aura:attribute name="appeasementModalPromise" type="Aura.Action"/>
-
-    <aura:attribute name="caseRecordId"            type="String" />
+    <aura:attribute name="caseRecord"            type="Object" />
     <aura:handler event="c:trac_CloseModalApplicationEvent" action="{!c.handleCloseModalApplicationEvent}"/>
-    <aura:handler name="init" value="{!this}" action="{!c.init}" />
-
+    <aura:handler event="c:trac_EditLoyaltyApplicationEvent" action="{!c.handleEditLoyaltyApplicationEvent}"/>
     <lightning:spinner variant="brand" size="large" aura:id="Id_spinner" class="slds-hide"/>
     <aura:attribute type="Integer"  name="responseCode"  default=""/>
     <aura:attribute type="String"  name="bodyMsg"  default=""/>
     <aura:attribute type="Boolean" name="isMerkleError"   default="false"/>
     <aura:attribute type="Boolean" name="canRetry"   default="false"/>
     <c:trac_MerkleErrorComponent canRetry="{!v.canRetry}" reattempt="{!c.handleSaveChanges}" isMerkleError="{!v.isMerkleError}" bodyMsg="{!v.bodyMsg}" responseCode="{!v.responseCode}"/>
-
     <lightning:overlayLibrary aura:id="overlayLib"/>
     <lightning:layout multipleRows="true">
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Loyalty Number</p>
                 <p>{!v.loyalty.external_customer_id}</p>
             </div>
         </lightning:layoutItem>
         <aura:if isTrue="{!not(v.isEditable)}">
-
             <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
-            <div class="header-column">
-                <p class="field-title slds-form-element__label slds-no-flex">Primary Account Contact</p>
-                <p>
-                    <lightning:formattedName
-                            firstName="{!v.loyalty.first_name}"
-                            lastName="{!v.loyalty.last_name}"
-                            format="short"
-                    />
+                <div class="header-column">
+                    <p class="field-title slds-form-element__label slds-no-flex">Primary Account Contact</p>
+                    <p>
+                        <lightning:formattedName
+                                firstName="{!v.loyalty.first_name}"
+                                lastName="{!v.loyalty.last_name}"
+                                format="short"
+                        />
                     </p>
                 </div>
             </lightning:layoutItem>
-
-
         </aura:if>
         <aura:if isTrue="{!v.isEditable}">
             <lightning:layoutItem class="slds-p-around_xx-small" size="3">
@@ -72,10 +64,8 @@
                             onchange="{!c.handleChange}"/>
                 </div>
             </lightning:layoutItem>
-
         </aura:if>
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Account Tier</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.top_tier_name))}">
@@ -86,24 +76,18 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
-
         <aura:if isTrue="{!not(v.isEditable)}">
             <lightning:layoutItem class="slds-p-around_xx-small" size="6">
                 <div class="header-column">
                     <p class="field-title slds-form-element__label slds-no-flex">Email</p>
                     <aura:if isTrue="{!not(empty(v.loyalty.email))}">
                         <p><lightning:formattedEmail value="{!v.loyalty.email}" hideIcon="true"/></p>
-
-
-                    <aura:set attribute="else">
-                        <p>N/A</p>
-                    </aura:set>
-                </aura:if>
-            </div>
-        </lightning:layoutItem>
-
-
+                        <aura:set attribute="else">
+                            <p>N/A</p>
+                        </aura:set>
+                    </aura:if>
+                </div>
+            </lightning:layoutItem>
         </aura:if>
         <aura:if isTrue="{!v.isEditable}">
             <lightning:layoutItem class="slds-p-around_xx-small" size="6">
@@ -121,8 +105,6 @@
             </lightning:layoutItem>
         </aura:if>
         <lightning:layoutItem class="slds-p-around_xx-small"  size="6">
-
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Account Status</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.status))}">
@@ -139,9 +121,7 @@
             </div>
         </lightning:layoutItem>
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
             <div class="header-column">
-
                 <p class="field-title slds-form-element__label slds-no-flex">Account Phone</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.home_phone))}">
                     <p><lightning:formattedPhone value="{!v.loyalty.home_phone}"/></p>
@@ -153,8 +133,6 @@
         </lightning:layoutItem>
         <lightning:layoutItem class="slds-p-around_xx-small"  size="6">
             <div class="header-column">
-
-
                 <p class="field-title slds-form-element__label slds-no-flex">Last Point Activity</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.last_activity))}">
                     <p><lightning:formattedDateTime value="{!v.loyalty.last_activity}" year="numeric" month="long" day="2-digit"/></p>
@@ -164,8 +142,6 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
-
         <lightning:layoutItem class="slds-p-around_xx-small"  size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Credit</p>
@@ -173,27 +149,21 @@
             </div>
         </lightning:layoutItem>
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Points Available for Redemption</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.balance))}">
                     <p><lightning:formattedNumber value="{!v.loyalty.balance}"/>
                         (<lightning:formattedNumber value="{!v.loyalty.balance_in_dollars}" style="currency" currencyCode="CAD" currencyDisplayAs="symbol"/>)
-                        </p>
+                    </p>
                     <aura:set attribute="else">
                         <p>N/A</p>
                     </aura:set>
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
-
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-<!--            Place Holder to keep air miles on the left side-->
+            <!--            Place Holder to keep air miles on the left side-->
         </lightning:layoutItem>
-
-
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">AirMiles Link</p>
@@ -205,13 +175,9 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
-
     </lightning:layout>
     <lightning:layout >
         <lightning:layoutItem class="slds-p-around_xx-small">
-
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Badges</p>
                 <div>
@@ -234,14 +200,10 @@
             </lightning:layout>
         </aura:if>
     </lightning:layout>
-
-
     <lightning:accordion aura:id="accordion" allowMultipleSectionsOpen="true">
         <lightning:accordionSection name="tier" label="Tier Qualification">
             <lightning:layout multipleRows="true">
                 <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
-
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Current Year Spend</p>
                         <aura:if isTrue="{!not(empty(v.loyalty.member_attributes.ytd_spend))}">
@@ -286,8 +248,6 @@
                         <aura:if isTrue="{!not(empty(v.loyalty.top_tier_expiration_date))}">
                             <p><lightning:formattedDateTime value="{!v.loyalty.top_tier_expiration_date}" year="numeric" month="long" day="2-digit"
                                                             hour="2-digit" minute="2-digit" timeZoneName="short" timeZone="America/Los_Angeles"/></p>
-
-
                             <aura:set attribute="else">
                                 <p>N/A</p>
                             </aura:set>
@@ -320,7 +280,7 @@
                 <lightning:layoutItem class="slds-p-around_xx-small" size="6">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Qualifying Purchase Visits (purchases on separate days)</p>
-                            <p>Unknown</p>
+                        <p>Unknown</p>
                     </div>
                 </lightning:layoutItem>
                 <lightning:layoutItem class="slds-p-around_xx-small" size="6">
@@ -350,8 +310,6 @@
         <lightning:accordionSection name="TH" title="Transaction History" label="Transaction History">
             <c:trac_LoyaltyTransactionHistory customerIdInput="{!v.loyalty.external_customer_id}" />
         </lightning:accordionSection>
-
-
     </lightning:accordion>
     <lightning:layout multipleRows="true">
         <lightning:layoutItem padding="around-small" size="4">
@@ -361,10 +319,8 @@
             <lightning:button aura:id="btnRecordTransaction" name="recordTransaction" label="Record Transaction" onclick="{!c.handleShowRecordTransaction}"/>
         </lightning:layoutItem>
         <lightning:layoutItem padding="around-small" size="4">
-            <c:trac_EscalateToLoyaltyTeam recordId="{!v.caseRecordId}" />
+            <c:trac_EscalateToLoyaltyTeam caseRecord="{!v.caseRecord}" />
         </lightning:layoutItem>
-
-
     </lightning:layout>
     <div aura:id="divRecordTransaction">
         {!v.body}
