--- a/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
+++ b/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
@@ -23,41 +23,50 @@
                                 <p>{!v.paymentMethod.PaymentType}</p>
                             </div>
                         </lightning:layoutItem>
-
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card Name</p>
-                                <p>{!v.paymentMethod.CreditCardName}</p>
-                            </div>
-                        </lightning:layoutItem>
-
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card Type</p>
-                                <p>{!v.paymentMethod.CreditCardType}</p>
-                            </div>
-                        </lightning:layoutItem>
-
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Credit
-                                    Card</p>
-                                <p>{!v.paymentMethod.DisplayCreditCardNo}</p>
-                            </div>
-                        </lightning:layoutItem>
-
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift
-                                    Card</p>
-                                <p>{!v.paymentMethod.DisplaySvcNo}</p>
-                            </div>
-                        </lightning:layoutItem>
+                        
+                        <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'PAYPAL'))}">
+                            <lightning:layoutItem padding="around-small">
+                                <div class="header-column">
+                                    <p class="field-title slds-form-element__label slds-no-flex">Credit Card Name</p>
+                                    <p>{!v.paymentMethod.CreditCardName}</p>
+                                </div>
+                            </lightning:layoutItem>
+                            <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'OFF5_EMC'))}">
+                            <lightning:layoutItem padding="around-small">
+                                <div class="header-column">
+                                    <p class="field-title slds-form-element__label slds-no-flex">Credit Card</p>
+                                    <p>{!v.paymentMethod.CreditCardType} ending in {!v.paymentMethod.DisplayCreditCardNo}</p>
+                                </div>
+                            </lightning:layoutItem>
+                            <lightning:layoutItem padding="around-small">
+                                <div class="header-column">
+                                    <p class="field-title slds-form-element__label slds-no-flex">Credit Card Token</p>
+                                    <p>{!v.paymentMethod.CreditCardNo}</p>
+                                </div>
+                            </lightning:layoutItem>
+                            <lightning:layoutItem padding="around-small">
+                                <div class="header-column">
+                                    <p class="field-title slds-form-element__label slds-no-flex">Expiration Date</p>
+                                    <p>{!v.paymentMethod.CreditCardExpDate}</p>
+                                </div>
+                            </lightning:layoutItem>
+                            </aura:if>
+                            <aura:if isTrue="{!not(empty(v.paymentMethod.DisplaySvcNo))}">
+                                <lightning:layoutItem padding="around-small">
+                                    <div class="header-column">
+                                        <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift
+                                            Card
+                                        </p>
+                                        <p>{!v.paymentMethod.DisplaySvcNo}</p>
+                                    </div>
+                                </lightning:layoutItem>
+                            </aura:if>
+                        </aura:if>
 
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
                                 <p class="field-title slds-form-element__label slds-no-flex">Amount To Be Charged</p>
-                                <p>{!v.paymentMethod.RequestAmount}</p>
+                                <p>{! empty(v.paymentMethod.RequestAmount) ? '0.00' : v.paymentMethod.RequestAmount}</p>
                             </div>
                         </lightning:layoutItem>
 
