--- a/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
+++ b/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
@@ -54,9 +54,7 @@
                             <aura:if isTrue="{!not(empty(v.paymentMethod.DisplaySvcNo))}">
                                 <lightning:layoutItem padding="around-small">
                                     <div class="header-column">
-                                        <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift
-                                            Card
-                                        </p>
+                                        <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift Card</p>
                                         <p>{!v.paymentMethod.DisplaySvcNo}</p>
                                     </div>
                                 </lightning:layoutItem>
@@ -66,21 +64,33 @@
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
                                 <p class="field-title slds-form-element__label slds-no-flex">Amount To Be Charged</p>
-                                <p>{! empty(v.paymentMethod.RequestAmount) ? '0.00' : v.paymentMethod.RequestAmount}</p>
+                                <p>
+                                    <lightning:formattedNumber
+                                            value="{! empty(v.paymentMethod.RequestAmount) ? '0.00' : v.paymentMethod.RequestAmount}"
+                                            style="currency" currencyCode="USD" currencyDisplayAs="symbol"/>
+                                </p>
                             </div>
                         </lightning:layoutItem>
 
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
                                 <p class="field-title slds-form-element__label slds-no-flex">Total Authorized</p>
-                                <p>{!v.paymentMethod.TotalAuthorized}</p>
+                                <p>
+                                    <lightning:formattedNumber
+                                            value="{!v.paymentMethod.TotalAuthorized}" style="currency"
+                                            currencyCode="USD" currencyDisplayAs="symbol"/>
+                                </p>
                             </div>
                         </lightning:layoutItem>
 
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
                                 <p class="field-title slds-form-element__label slds-no-flex">Total Charged</p>
-                                <p>{!v.paymentMethod.TotalCharged}</p>
+                                <p>
+                                    <lightning:formattedNumber
+                                            value="{!v.paymentMethod.TotalCharged}" style="currency"
+                                            currencyCode="USD" currencyDisplayAs="symbol"/>
+                                </p>
                             </div>
                         </lightning:layoutItem>
 
